--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -20,6 +24,7 @@
     "nodemailer": "^6.9.7",
     "randomstring": "^1.3.0",
     "sequelize": "^6.35.2",
+    "uid": "^2.0.2",
     "validator": "^13.11.0"
   }
 }
