--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-PRIVATE_KEY = 'your_private'
+USER=your_database_user
+PASSWORD=your_database_password
+HOST=your_host_name
+PORT=your_database_port
+DATABASE=your_database_name
+SCHEMA=your_schema_name
