--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "express-session": "^1.17.3",
+    "express-validator": "^7.1.0",
     "http-errors": "~1.6.3",
+    "joi": "^17.13.3",
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
