feat: reset password

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,33 @@
-USER=your_database_user
-PASSWORD=your_database_password
-HOST=your_host_name
-PORT=your_database_port
-DATABASE=your_database_name
-SCHEMA=your_schema_name
+# APP
+APP_HOST="127.0.0.1"
+APP_PORT="3300"
+
+# MYSQL
+DB_USER="root"
+DB_PASSWORD="root"
+DATABASE="epressjsapi"
+DATABASE_URL="mysql://root:password@localhost:3306/epressjsapi?schema=public"
+
+# MONGODB
+MONGODB_URL="mongodb://127.0.0.1:27017/rest-api-nodejs-mongodb"
+# Example Connection String:-
+# mongodb://[MongodbHost]:[PORT]/[DatabaseName]
+
+# HASH
+SALT_ROUND=10
+
+# JWT
+JWT_SECRET="your_jwt_secret_here"
+# Example Secret: abcdefghijklmnopqrstuvwxyz1234567890
+AUTH_JWT_TIMEOUT_DURATION="1h"
+PASSWORD_RESET_JWT_TIMEOUT_DURATION="5m"
+ACCOUNT_ACTIVATION_JWT_TIMEOUT_DURATION="15m"
+# You can place duration available here: https://github.com/auth0/node-jsonwebtoken#usage
+# Search for "expiresIn" option on above link.
+
+# EMAIL
+EMAIL_SMTP_HOST="smtp.gmail.com"
+EMAIL_SMTP_PORT=587
+EMAIL_SMTP_USERNAME="your_email_username"
+EMAIL_SMTP_PASSWORD="your_email_ app_password"
+EMAIL_SMTP_SECURE=false # true for 465, false for other ports
