--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -24,6 +25,8 @@
     "joi": "^17.13.3",
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.2",
     "morgan": "~1.9.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.14",
@@ -35,12 +38,14 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.1.0",
     "@types/nodemailer": "^6.4.15",
+    "mocha": "^10.7.3",
     "nodemon": "^3.1.4",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
