Add validation with Joi

--- a/.env.example
+++ b/.env.example
@@ -9,21 +9,17 @@ DATABASE="epressjsapi"
 DATABASE_URL="mysql://root:password@localhost:3306/epressjsapi?schema=public"
 
 # MONGODB
-MONGODB_URL="mongodb://127.0.0.1:27017/rest-api-nodejs-mongodb"
-# Example Connection String:-
-# mongodb://[MongodbHost]:[PORT]/[DatabaseName]
+MONGODB_URL="mongodb+srv://<username>:<password>@atlascluster..."
 
 # HASH
+HASH_SECRET="secret"
 SALT_ROUND=10
 
 # JWT
-JWT_SECRET="your_jwt_secret_here"
-# Example Secret: abcdefghijklmnopqrstuvwxyz1234567890
+JWT_SECRET="secret"
 AUTH_JWT_TIMEOUT_DURATION="1h"
 PASSWORD_RESET_JWT_TIMEOUT_DURATION="5m"
 ACCOUNT_ACTIVATION_JWT_TIMEOUT_DURATION="15m"
-# You can place duration available here: https://github.com/auth0/node-jsonwebtoken#usage
-# Search for "expiresIn" option on above link.
 
 # EMAIL
 EMAIL_SMTP_HOST="smtp.gmail.com"
