--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "td3",
-  "version": "0.0.0",
+  "name": "expressjs-init",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "dev": "nodemon src/server.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "@types/mocha": "^10.0.7",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^7.1.7",
@@ -21,6 +22,7 @@
     "express-fileupload": "^1.4.3",
     "express-session": "^1.17.3",
     "express-validator": "^7.1.0",
+    "expressjs-init": "file:",
     "http-errors": "~1.6.3",
     "joi": "^17.13.3",
     "json": "^11.0.0",
@@ -32,15 +34,16 @@
     "nodemailer": "^6.9.14",
     "randomstring": "^1.3.0",
     "sequelize": "^6.35.2",
-    "td3": "file:",
     "uid": "^2.0.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.1.0",
@@ -48,6 +51,7 @@
     "mocha": "^10.7.3",
     "nodemon": "^3.1.4",
     "prisma": "^5.17.0",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
