Add helmet and rate limiter features

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,13 @@ APP_PORT="3300"
 
 # MYSQL
 DB_USER="root"
-DB_PASSWORD="root"
+DB_PASSWORD="secret"
 DATABASE="epressjsapi"
 DATABASE_URL="mysql://root:password@localhost:3306/epressjsapi?schema=public"
 
 # MONGODB
-MONGODB_URL="mongodb+srv://<username>:<password>@atlascluster..."
+# mongodb+srv://USERNAME:PASSWORD@HOST/DATABASE
+MONGODB_URL="mongodb+srv://<username>:<password>@<host>/<database>"
 
 # HASH
 HASH_SECRET="secret"
