--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
+    "express-rate-limit": "^7.4.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.1.0",
     "expressjs-init": "file:",
+    "helmet": "^7.1.0",
     "http-errors": "~1.6.3",
     "joi": "^17.13.3",
     "json": "^11.0.0",
